# treechat

./: .gitignore  .replit  Dockerfile  README.md  dev.sh  docker-compose.yml  package-lock.json  replit.md  run_server.py  start-dev.bat  start-dev.sh  start_server.sh
attached_assets/: Pasted-In-HTML-button-cannot-be-a-descendant-of-button-This-wi_1769408947687.txt
client/: README.md  package-lock.json  package.json  vite.config.ts
client/src/: index.css  main.tsx
client/src/components/: AppHeader.tsx  AppLayout.tsx  ChatComposer.tsx  ChatMessage.tsx  CheckpointCard.tsx  CommandSuggestions.tsx  ContextPanel.tsx  EmptyState.tsx  EnhancedChatComposer.tsx  ForkInfo.tsx  ForkThreadDialog.tsx  HomeContent.tsx  MarkdownContent.tsx  QuickActions.tsx  ReminderCard.tsx  Sidebar.tsx  SidebarDialogs.tsx  SidebarFooter.tsx  SidebarHeader.tsx  SidebarItemActions.tsx  SidebarTree.tsx  SmartChatMessage.tsx  TaskCard.tsx  TaskList.tsx  TaskListMessage.tsx  ThemeProvider.tsx  ThemeToggle.tsx  UndoToast.tsx  (+1 more)
plans/: mvc_refactor_plan.md
server/: .env.example  config.py  llm.py  logger.py  main.py  models.py  pyproject.toml  requirements.txt
server/fastlogger/: .gitignore  Cargo.toml
server/fastlogger/src/: lib.rs
server/routes/: chat.py  contexts.py  folders.py  messages.py  search.py  summary.py  tasks.py
server/services/: chat_service.py  reschedule_service.py  task_service.py  task_summary_service.py  undo_service.py
server/utils/: intelligent_task_detector.py  intent_classifier.py  llm.py  nlp.py  route_logger.py  task_patterns_knowledge_base.py  urgency.py
(+29 files in other folders)
